--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   speech_to_text: ^6.3.0
   highlight_text: ^1.6.0
   avatar_glow: ^2.0.2
+  translator: ^0.1.7
 
 
   # The following adds the Cupertino Icons font to your application.
